fix scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,26 +518,19 @@ header .navbar a:hover{
     height: 0px;
   }
   ::-webkit-scrollbar-thumb {
-    background: #a3a3a3;
+    background: #cccccc;
     border: 0px none #ffffff;
-    border-radius: 50px;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #757575;
+    background: #a3a3a3;
   }
   ::-webkit-scrollbar-thumb:active {
-    background: #616161;
+    background: #7b7b7b;
   }
   ::-webkit-scrollbar-track {
-    background: #dedede;
+    background: #f0f0f0;
     border: 0px none #ffffff;
     border-radius: 0px;
-  }
-  ::-webkit-scrollbar-track:hover {
-    background: #dedede;
-  }
-  ::-webkit-scrollbar-track:active {
-    background: #dedede;
   }
   ::-webkit-scrollbar-corner {
     background: transparent;
